--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 node_modules/
 jspm_packages/
 goit-js-hw-09/
+goit-js-hw-10/node_modules/
 
 # TypeScript v1 declaration files
 typings/
