--- a/goit-js-hw-13/package.json
+++ b/goit-js-hw-13/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/at0mua/JavaScript20",
   "devDependencies": {
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "autoprefixer": "^9.8.6",
@@ -51,6 +51,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "handlebars": "^4.7.3",
+    "infinite-scroll": "^3.0.6",
     "material-design-icons": "^3.0.1"
   }
 }
